docs(Lab04): Update doc for Lab-04 Audio Steganography

--- a/Lab04-AudioSteganography/媒体文件格式剖析.md
+++ b/Lab04-AudioSteganography/媒体文件格式剖析.md
@@ -245,19 +245,499 @@ LSB 算法：
 
 ### WAV 媒体文件隐藏方法探讨
 
-
+本次实验中，采用 LSB 隐藏法对 wav 媒体文件进行信息隐藏。
 
 ### 基于 WAV 格式文件的秘密信息的隐藏和提取
 
+在本次实验中，针对 **WAV 格式文件作为信息隐藏的载体信息**，我们尝试了基本的 **LSB 隐藏法**，同时为了对抗针对LSB隐写术的隐写分析，我们提出了一种基于 LSB 隐藏法的变种方法，我们称其为 **随机 LSB 隐藏法**，其核心思想是在信息隐藏时随机选取嵌入位置为 1st-LSB 还是 2nd-LSB。
+
+本部分内容的总览如下：
+
+1. **wav 格式文件读取**
+2. **LSB 隐写术**：
+   1. 音频文件的嵌入与提取
+   2. 图像的嵌入与提取
+3. **随机 LSB 隐写**：为对抗LSB隐写分析，随机采用 1st-LSB 或 2nd-LSB 作为嵌入位置。
+
+#### wav 格式文件读取
+
+为方便后续的实验，我们首先封装一个函数 `wav_read` ，用来读取 wav 格式文件，提取出用于信息隐藏的关键信息。
+
+该函数的原型如下：
+
+```matlab
+[header, data, bits_per_sample] = wav_read(file_path)
+```
+
+其中，函数的输入为 `file_path` ，函数的返回值为 `header`  `data`  `bits_per_sample` 。
+
+- `file_path`：wav格式文件的路径，类型为字符串类型。
+- `header`：wav格式文件的 Data Chunk 的 Data 字段前的所有数据，以字节为单位读取。
+- `data`：wav格式文件的 Data Chunk 的 Data 字段的内容，以 `bits_per_sample` 个比特为单位进行读取（按照小端序）。
+- `bits_per_sample`：wav格式文件的 BitsPerSample 字段（2字节，小端序），代表每个样本的数据位数。
+
+代码如下：
+
+```matlab
+function [header, data, bits_per_sample] = wav_read(file_path)
+%WAV_READ Read the `Data` Field of Data Chunk of wav Format File
+%   file_path: path to wav file
+%   header: all data before the `Data` Field of Data Chunk
+%   data: the `Data` Field of Data Chunk
+%   bits_per_sample: Bits Per Sample
+
+fid = fopen(file_path, "r"); % Open the wav file
+
+header = fread(fid, 44, 'uint8'); % Header
+
+fseek(fid, 34, 'bof'); % Shift the file pointer to `BitsPerSample` field
+bits_per_sample = fread(fid, 1, 'uint16'); % BitsPerSample (2Bytes, Little-Endian)
+
+fseek(fid, 44, 'bof'); % Shift the file pointer to `Data` field of Data Chunk
+data = fread(fid, ['uint', num2str(bits_per_sample)]); % `Data` field of Data Chunk
+
+fclose(fid); % Close file
+
+end
+```
+
+该段代码主要依据 wav 文件格式进行 wav 文件读取以及重要信息的提取，以便于后续的信息隐藏操作。
+
+> ⚠️ **注意**
+>
+> 一般而言，纯 wav 文件（非其他格式文件转换，即无其他可选数据块）的头部（Data Chunk 的 Data 字段前的所有数据）的大小为 44 字节，由于本实验中的 wav 音频文件并无其他可选的数据块，因此代码中采用硬编码的方式。
+>
+> 若 wav 音频文件含有其他可选的数据块，则可以根据需要调整对应的代码。
+
+#### LSB 隐藏法
+
+采用 LSB 隐藏法，将待隐藏的信息 payload 的每一个 bit 嵌入到 wav 音频文件的 Data 数据块的 Data 字段（以 `BitsPerSample` 位为一组）的 LSB（最低有效位）中，从而实现信息的隐藏；与此同理，提取 wav 音频文件的 Data 数据块的 Data 字段（以 `BitsPerSample` 位为一组）的 LSB（最低有效位），即可提取出隐藏的信息。
+
+本次实验中，分别采用 wav 音频文件和图像 作为待隐藏的信息（payload）。
+
+##### 音频文件的嵌入与提取
+
+```matlab
+% Audio File (Wav Format) Steganography uisng LSB
+clear;
+clc;
+close all;
+
+% Read data from cover.wav
+[header, cover, bits_per_sample] = wav_read("audio/cover.wav");
+
+% Read data from payload.wav in bit
+fid = fopen("audio/payload.wav", "r"); % Open file
+payload = fread(fid, 'ubit1');
+fclose(fid); % Close file
+
+payload_len = length(payload); % length of payload
+assert(payload_len <= length(cover), "Payload Length should NOT be greater than cover medium!");
 
 
+% Insert into LSB
+audio_with_info = cover;
+audio_with_info(1:payload_len) = bitset(cover(1:payload_len), 1, payload);
 
+% Save as wav file
+fid = fopen("audio/audio_with_info.wav", "w");
+fwrite(fid, header, 'uint8'); % Write Header
+fwrite(fid, audio_with_info, ['uint', num2str(bits_per_sample)]); % Write Data
+fclose(fid);
+
+
+% Extract from LSB
+[header, audio_with_info, bits_per_sample] = wav_read("audio/audio_with_info.wav");
+info = bitget(audio_with_info, 1);
+
+% Get the true size of info
+info_len_bits = info(33:64);
+info_len = uint32(0);
+for i = 1:32
+    info_len = bitset(info_len, i, info_len_bits(i));
+end
+info_len = info_len + 8; % Count in bytes (Add length of `ChunkID` and `ChunkSize`, 8 bytes in total)
+info_len = info_len * 8; % Count in bits
+
+fid = fopen("audio/info.wav", "w");
+fwrite(fid, info(1:info_len), 'ubit1'); % Save info.wav
+fclose(fid);
+
+
+% Display Results
+[cover_y, Fs_cover] = audioread("audio/cover.wav");
+cover_x = (0:length(cover_y)-1) / Fs_cover;
+[payload_y, Fs_payload] = audioread("audio/payload.wav");
+payload_x = (0:length(payload_y)-1) / Fs_payload;
+[audio_with_info_y, Fs_audio_with_info] = audioread("audio/audio_with_info.wav");
+audio_with_info_x = (0:length(audio_with_info_y)-1) / Fs_audio_with_info;
+[info_y, Fs_info] = audioread("audio/info.wav");
+info_x = (0:length(info_y)-1) / Fs_info;
+
+figure(1);
+subplot(2, 2, 1);
+plot(cover_x, cover_y);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Cover Medium");
+
+subplot(2, 2, 2);
+plot(payload_x, payload_y);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Payload Audio");
+
+subplot(2, 2, 3);
+plot(audio_with_info_x, audio_with_info_y);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Audio with Info");
+
+subplot(2, 2, 4);
+plot(info_x, info_y);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Extracted Audio");
+
+
+% Display Results in Detail
+figure(2);
+axis_set = [0.5, 1, -1, 1];
+
+subplot(2, 2, 1);
+plot(cover_x, cover_y);
+axis(axis_set);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Cover Medium");
+
+subplot(2, 2, 2);
+plot(payload_x, payload_y);
+axis(axis_set);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Payload Audio");
+
+subplot(2, 2, 3);
+plot(audio_with_info_x, audio_with_info_y);
+axis(axis_set);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Audio with Info");
+
+subplot(2, 2, 4);
+plot(info_x, info_y);
+axis(axis_set);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Extracted Audio");
+```
+
+本部分的主要思路如下：
+
+1. **载体与payload准备**：使用前面的 `wav_read` 函数加载载体文件，同时以二进制形式按照 1bit 读取 payload 文件。
+2. **载体容量判断**：判断载体容量是否能够容纳 payload 信息。
+3. **信息嵌入**：将 payload 信息嵌入到载体文件的可隐藏部分的 LSB 中，并保存嵌入信息后的 wav 音频文件。
+4. **信息提取**：读取嵌入信息后的 wav 音频文件，从其中的隐藏信息段（Data数据块的Data字段）的 LSB 中提取出隐藏信息 payload，在该过程中需要注意恢复 payload 信息的实际大小。
+5. **结果展示**：将结果进行可视化展示，以便于实验的结果分析；同时由于音频文件较长，因此截取其 $0.5s$ ~ $1.0s$ 的数据进行更细致化的可视化展示。
+
+##### 图像的嵌入与提取
+
+```matlab
+% Audio File (Wav Format) Steganography uisng LSB
+% Insert Image into Audio
+clear;
+clc;
+close all;
+
+% Read data from cover.wav
+[header, cover, bits_per_sample] = wav_read("audio/cover.wav");
+
+% Read payload image
+payload = imread("images/MisakaMikoto.png"); % Payload (Hidden Data)
+payload = im2gray(payload); % Convert RGB to Gray
+payload = imbinarize(payload); % Binarization
+
+[n_row, n_col] = size(payload);
+payload_len = n_row * n_col; % length of payload
+assert(payload_len <= length(cover), "Payload Length should NOT be greater than cover medium!");
+
+
+% Covert payload matix to sequence (NOTE: MATLAB squeeze matrix in col by default)
+payload_seq = payload(:); % Squeeze into column vector
+
+
+% Insert into LSB
+audio_with_img = cover;
+audio_with_img(1:payload_len) = bitset(cover(1:payload_len), 1, payload_seq);
+
+% Save as wav file
+fid = fopen("audio/audio_with_img.wav", "w");
+fwrite(fid, header, 'uint8'); % Write Header
+fwrite(fid, audio_with_img, ['uint', num2str(bits_per_sample)]); % Write Data
+fclose(fid);
+
+
+% Extract from LSB
+[header, audio_with_img, bits_per_sample] = wav_read("audio/audio_with_img.wav");
+img = bitget(audio_with_img, 1);
+
+% Reshape sequence to matrix
+img = img(1:payload_len);
+img = reshape(img, n_row, n_col);
+
+
+% Display Results
+[cover_y, Fs_cover] = audioread("audio/cover.wav");
+cover_x = (0:length(cover_y)-1) / Fs_cover;
+[audio_with_img_y, Fs_audio_with_img] = audioread("audio/audio_with_img.wav");
+audio_with_img_x = (0:length(audio_with_img_y)-1) / Fs_audio_with_img;
+
+figure(1);
+subplot(2, 1, 1);
+plot(cover_x, cover_y);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Cover Medium");
+
+subplot(2, 1, 2);
+plot(audio_with_img_x, audio_with_img_y);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Audio with Image");
+
+figure(2);
+subplot(1, 2, 1);
+imshow(payload);
+title("Payload Image");
+subplot(1, 2, 2);
+imshow(img);
+title("Extracted Image");
+
+
+% Display Results in Detail
+figure(3);
+axis_set = [0.5, 1, -0.15, 0.15];
+
+subplot(2, 1, 1);
+plot(cover_x, cover_y);
+axis(axis_set);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Cover Medium");
+
+subplot(2, 1, 2);
+plot(audio_with_img_x, audio_with_img_y);
+axis(axis_set);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Audio with Image");
+```
+
+本部分的主要思路如下：
+
+1. **载体与payload准备**：使用前面的 `wav_read` 函数加载载体文件，使用 `imread` 函数读取 payload 图像，并将其灰度化和二值化。
+2. **载体容量判断**：判断载体容量是否能够容纳 payload 信息。
+3. **信息嵌入**：将 payload 信息嵌入到载体文件的可隐藏部分的 LSB 中，并保存嵌入信息后的 wav 音频文件。
+4. **信息提取**：读取嵌入信息后的 wav 音频文件，从其中的隐藏信息段（Data数据块的Data字段）的 LSB 中提取出隐藏信息 payload，在该过程中需要注意恢复 payload 信息的实际大小。
+5. **结果展示**：将结果进行可视化展示，以便于实验的结果分析；同时由于音频文件较长，因此截取其 $0.5s$ ~ $1.0s$ 的数据进行更细致化的可视化展示。
+
+#### 随机 LSB 隐藏法 - 随机选取 1st-LSB 或 2nd-LSB
+
+常规的 LSB 隐写很容易被**隐写分析**，攻击者可以从藏有信息的文件中提取出 LSB，分析 LSB 的分布规律等统计特性，就能够发现该文件隐藏了信息。
+
+为了应对常规 LSB 的隐写分析，我们将 LSB 隐写进行变体，随机的选取 1st-LSB 或 2nd-LSB 作为信息的隐藏位置，我们称其为 **随机LSB隐写术**。
+
+随机 LSB 隐写的步骤如下：
+
+1. 发送方和接收方需要约定好采用同一个伪随机数发生器以及相同的随机种子。
+2. 发送方根据 payload 的大小生成对应长度的二值随机数序列（例如随机的 $\{1, 2\}$ 序列），分别表示隐藏位置为 1st-LSB 或 2nd-LSB。
+3. 发送方根据生成的二值随机数序列进行信息嵌入。
+4. 接收方根据同样的二值随机数序列进行隐藏信息的提取。
+
+随机LSB的代码如下：
+
+```matlab
+% Audio File (Wav Format) Steganography uisng LSB
+% Randomly choose to use LSB or second-Least Significant Bit.
+clear;
+clc;
+close all;
+
+% Read data from cover.wav
+[header, cover, bits_per_sample] = wav_read("audio/cover.wav");
+
+% Read data from payload.wav in bit
+fid = fopen("audio/payload.wav", "r"); % Open file
+payload = fread(fid, 'ubit1');
+fclose(fid); % Close file
+
+payload_len = length(payload); % length of payload
+assert(payload_len <= length(cover), "Payload Length should NOT be greater than cover medium!");
+
+
+% Random Genaration
+bit_choice = randi(2, payload_len, 1);
+
+% Insert into LSB
+audio_with_info = cover;
+for i = 1:payload_len
+    audio_with_info(i) = bitset(cover(i), bit_choice(i), payload(i));
+end
+
+% Save as wav file
+fid = fopen("audio/audio_with_info.wav", "w");
+fwrite(fid, header, 'uint8'); % Write Header
+fwrite(fid, audio_with_info, ['uint', num2str(bits_per_sample)]); % Write Data
+fclose(fid);
+
+
+% Extract from LSB
+[header, audio_with_info, bits_per_sample] = wav_read("audio/audio_with_info.wav");
+info = zeros(size(audio_with_info));
+for i = 1:payload_len
+    info(i) = bitget(audio_with_info(i), bit_choice(i));
+end
+
+% Get the true size of info
+info_len_bits = info(33:64);
+info_len = uint32(0);
+for i = 1:32
+    info_len = bitset(info_len, i, info_len_bits(i));
+end
+info_len = info_len + 8; % Count in bytes (Add length of `ChunkID` and `ChunkSize`, 8 bytes in total)
+info_len = info_len * 8; % Count in bits
+
+fid = fopen("audio/info.wav", "w");
+fwrite(fid, info(1:info_len), 'ubit1'); % Save info.wav
+fclose(fid);
+
+
+% Display Results
+[cover_y, Fs_cover] = audioread("audio/cover.wav");
+cover_x = (0:length(cover_y)-1) / Fs_cover;
+[payload_y, Fs_payload] = audioread("audio/payload.wav");
+payload_x = (0:length(payload_y)-1) / Fs_payload;
+[audio_with_info_y, Fs_audio_with_info] = audioread("audio/audio_with_info.wav");
+audio_with_info_x = (0:length(audio_with_info_y)-1) / Fs_audio_with_info;
+[info_y, Fs_info] = audioread("audio/info.wav");
+info_x = (0:length(info_y)-1) / Fs_info;
+
+figure(1);
+subplot(2, 2, 1);
+plot(cover_x, cover_y);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Cover Medium");
+
+subplot(2, 2, 2);
+plot(payload_x, payload_y);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Payload Audio");
+
+subplot(2, 2, 3);
+plot(audio_with_info_x, audio_with_info_y);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Audio with Info");
+
+subplot(2, 2, 4);
+plot(info_x, info_y);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Extracted Audio");
+
+
+% Display Results in Detail
+figure(2);
+axis_set = [0.5, 1, -1, 1];
+
+subplot(2, 2, 1);
+plot(cover_x, cover_y);
+axis(axis_set);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Cover Medium");
+
+subplot(2, 2, 2);
+plot(payload_x, payload_y);
+axis(axis_set);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Payload Audio");
+
+subplot(2, 2, 3);
+plot(audio_with_info_x, audio_with_info_y);
+axis(axis_set);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Audio with Info");
+
+subplot(2, 2, 4);
+plot(info_x, info_y);
+axis(axis_set);
+xlabel('Time / (s)'); ylabel('Amplitude');
+title("Extracted Audio");
+```
+
+本部分的主要思路如下：
+
+1. **载体与payload准备**：使用前面的 `wav_read` 函数加载载体文件，同时以二进制形式按照 1bit 读取 payload 文件。
+2. **载体容量判断**：判断载体容量是否能够容纳 payload 信息。
+3. **二值随机数生成**：按照 payload 的长度，生成一个二值随机数序列，作为后续的信息嵌入位置。
+4. **信息嵌入**：根据前面生成的二值随机数序列，决定信息隐藏的位置是 1st-LSB 或 2nd-LSB，并嵌入信息到对应的bit位，最终保存嵌入信息后的 wav 音频文件。
+5. **信息提取**：读取嵌入信息后的 wav 音频文件，根据前面的二值随机数序列来决定从隐藏信息段（Data数据块的Data字段）的1st-LSB 或 2nd-LSB中提取出隐藏信息 payload，在该过程中需要注意恢复 payload 信息的实际大小。
+6. **结果展示**：将结果进行可视化展示，以便于实验的结果分析；同时由于音频文件较长，因此截取其 $0.5s$ ~ $1.0s$ 的数据进行更细致化的可视化展示。
 
 ## 实验结果及分析
 
+选取李老师的一段授课 wav 音频作为载体，选取歌曲《Never gonna give you up》中的片段作为音频 payload 信息。
 
+### LSB 隐写
 
+#### 音频文件的嵌入与提取
 
+![image-20240423142356791](./媒体文件格式剖析.assets/image-20240423142356791.png)
+
+截取其中的 $0.5s$ ~ $1.0s$ 的数据进行更细致化的可视化展示：
+
+![image-20240423142422541](./媒体文件格式剖析.assets/image-20240423142422541.png)
+
+可以看到 payload 被成功隐藏到载体音频中，并且隐藏信息后的音频与原始音频差别不大，人耳难以辨别；同时可以成功地从中提取出隐藏信息 payload，并且该过程是无损的，即提取到的信息与原始 payload 完全相同，这一点也可以通过下面的 MD5 哈希值相同得到验证。
+
+经过MD5哈希值验证，可以发现提取到的信息与原始 payload 完全相同，即可以实现信息的无损嵌入与无损提取。
+
+<img src="./媒体文件格式剖析.assets/image-20240423142958588.png" alt="image-20240423142958588" style="zoom:50%;" />
+
+#### 图像的嵌入与提取
+
+在这一部分中，采用的 payload 图像（未二值化）如下：
+
+<img src="./媒体文件格式剖析.assets/MisakaMikoto.png" alt="MisakaMikoto" style="zoom:25%;" />
+
+图像的嵌入与提取的结果如下：
+
+![image-20240423143554953](./媒体文件格式剖析.assets/image-20240423143554953.png)
+
+![image-20240423143630180](./媒体文件格式剖析.assets/image-20240423143630180.png)
+
+取其中的 $0.5s$ ~ $1.0s$ 的数据进行更细致化的可视化展示：
+
+![image-20240423143920239](./媒体文件格式剖析.assets/image-20240423143920239.png)
+
+可以看到 payload 被成功隐藏到载体音频中，并且隐藏信息后的音频与原始音频差别不大，人耳难以辨别；同时可以成功地从中提取出隐藏信息 payload，并且该过程是无损的，即提取到的信息与原始 payload 完全相同。
+
+除此之外，我们也采用另外一张图片作为 payload 再次进行实验，其原始图像（未二值化）如下：
+
+<img src="./媒体文件格式剖析.assets/ErwinZhou.jpg" alt="ErwinZhou" style="zoom:25%;" />
+
+结果如下：
+
+![image-20240423152857627](./媒体文件格式剖析.assets/image-20240423152857627.png)
+
+![image-20240423152914795](./媒体文件格式剖析.assets/image-20240423152914795.png)
+
+取其中的 $0.5s$ ~ $1.0s$ 的数据进行更细致化的可视化展示：
+
+![image-20240423152929221](./媒体文件格式剖析.assets/image-20240423152929221.png)
+
+根据结果可以得出与前面相同的结论。
+
+### 随机 LSB 隐写
+
+![image-20240423144356613](./媒体文件格式剖析.assets/image-20240423144356613.png)
+
+取其中的 $0.5s$ ~ $1.0s$ 的数据进行更细致化的可视化展示：
+
+![image-20240423144412614](./媒体文件格式剖析.assets/image-20240423144412614.png)
+
+可以看到 payload 被成功隐藏到载体音频中，并且隐藏信息后的音频与原始音频差别不大，人耳难以辨别；同时可以成功地从中提取出隐藏信息 payload，并且该过程是无损的，即提取到的信息与原始 payload 完全相同，这一点也可以通过下面的 MD5 哈希值相同得到验证。
+
+经过MD5哈希值验证，可以发现提取到的信息与原始 payload 完全相同，即可以实现信息的无损嵌入与无损提取。
+
+<img src="./媒体文件格式剖析.assets/image-20240423152534135.png" alt="image-20240423152534135" style="zoom:50%;" />
 
 ## 参考
 
@@ -283,7 +763,22 @@ LSB 算法：
 
 [https://blog.51cto.com/u_15287693/4628787](https://blog.51cto.com/u_15287693/4628787)
 
+https://www.cnblogs.com/kenneth2012/p/17161550.html
 
+## 文件结构说明
 
-## 说明
-
+```sh
+.
+├── wav_read.m      # wav音频文件读取函数
+├── LSB.m		    # LSB隐藏法（wav音频作payload）
+├── LSB_image.m     # LSB隐藏法（图像作payload）
+├── randomLSB.m     # 随机LSB隐藏法
+├── audio
+│   ├── cover.wav	# 载体音频
+│   └── payload.wav # payload音频
+├── images          # payload图像
+│   ├── ErwinZhou.jpg
+│   └── MisakaMikoto.png
+├── 媒体文件格式剖析.assets
+└── 媒体文件格式剖析.md
+```
