docs(Lab04): Update doc for Lab-04 Audio Steganography

--- a/Lab04-AudioSteganography/媒体文件格式剖析.md
+++ b/Lab04-AudioSteganography/媒体文件格式剖析.md
@@ -245,6 +245,27 @@ LSB 算法：
 
 ### WAV 媒体文件隐藏方法探讨
 
+WAV 媒体文件隐藏方法可以分为传统的音频隐写以及基于深度学习的音频隐写。我们这里重点介绍传统的音频隐写。
+
+传统的音频隐写根据秘密信息嵌入域不同，可以分为**时域**、**变换域**和**压缩域**方法，再根据所采用的技术将其进行详细划分，具体方法划分如下图所示：
+
+<img src="./媒体文件格式剖析.assets/6B8F89BB-C3B4-45b7-8772-4AD2068E3CE4-F002.jpg" alt="img" style="zoom: 33%;" />
+
+各种方法的优缺点如下：
+
+| 嵌入域 |       方法       |                       优点                       |                  缺点                  |
+| :----: | :--------------: | :----------------------------------------------: | :------------------------------------: |
+|  时域  |   LSB隐写方法    |   算法简单，易于实现、计算复杂度低、隐藏容量大   |         鲁棒性差，抗检测能力弱         |
+|  时域  | 相位编码隐写方法 |         鲁棒性好、可以有效调节不可感知性         |            具有一定的相似度            |
+|  时域  |   回声隐写方法   | 算法简单、隐藏效果好、不产生噪声、能够实现盲检测 | 隐藏容量小、提取效果差、信道噪声影响大 |
+|  时域  |   扩频隐写方法   |              鲁棒性好、不可感知性好              |        隐藏容量小、算法相对复杂        |
+| 变换域 |   FFT隐写方法    |               稳健性好、隐写容量大               |              不可感知性差              |
+| 变换域 |   DCT隐写方法    |                    隐写容量大                    |              计算复杂度高              |
+| 变换域 |   DWT隐写方法    |             隐写容量大、不可感知性好             |              计算复杂度高              |
+| 压缩域 |   MP3隐写方法    |                   不可感知性好                   |               隐写容量小               |
+| 压缩域 |   AAC隐写方法    |             抗隐写分析较好、鲁棒性好             |         高比特率下的隐写容量小         |
+| 压缩域 |   VoIP隐写方法   |  实时性好、隐写方法灵活、隐写区域多、抗检测性好  |               隐写容量小               |
+
 本次实验中，采用 LSB 隐藏法对 wav 媒体文件进行信息隐藏。
 
 ### 基于 WAV 格式文件的秘密信息的隐藏和提取
